# sure_challenge

./: README.md  pyproject.toml
sure_challenge/: deployment_cleaner.py  fuzz_deployment.py
