[tool.poetry]
name = "sure-challenge"
version = "0.1.0"
description = ""
authors = ["Jamey Owens <jameyowens@Jameys-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
boto3 = "^1.34.108"
requests = "^2.31.0"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
